loc gap fix

--- a/src/pages/Locations/Lists/LocationsList.module.css
+++ b/src/pages/Locations/Lists/LocationsList.module.css
@@ -149,4 +149,7 @@
     .descriptionBox3 {
         align-items: start;
     }
+    .cardList {
+        row-gap: 3.57rem;
+    }
 }
